--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,160 @@
   margin: 0;
   padding: 0;
 }
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 5rem;
+}
+.matches-container {
+  width: 85%;
+  height: 100%;
+  background-color: #eee;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 4rem;
+  padding-top: 100px;
+}
+.matches {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1rem;
+}
+.single-match {
+  margin-top: 2rem;
+  position: relative;
+  width: 450px;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 8px;
+}
+.single-match .hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  transition: all 0.6s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  gap: 1rem;
+}
+.hover button {
+  width: 170px;
+  height: 45px;
+  border: none;
+  background-color: #5f0a87;
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  border-radius: 8px;
+}
+.hover p {
+  font-weight: 700;
+  font-size: 18px;
+}
+.hover p:nth-child(1) {
+  font-weight: 800;
+  font-size: 20px;
+}
+.single-match:hover .hover {
+  transform: none;
+}
+.matches .single-match img {
+  width: 100%;
+}
+
+section.page-header {
+  position: relative;
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+section.page-header:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #a4508b;
+  background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+  border-radius: 0 0 50% 50%/0 0 100% 100%;
+  transform: scaleX(1.5);
+}
+section.page-header .content {
+  position: relative;
+  z-index: 1;
+  margin: 0 auto;
+  max-width: 900px;
+  text-align: center;
+}
+section.page-header .content h2 {
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  font-size: 3em;
+}
+section.page-header .content p {
+  color: #fff;
+  font-size: 1.2em;
+}
+.popup {
+  width: 100%;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9;
+}
+.popup .video {
+  width: 80% !important;
+  height: 90% !important;
+  overflow: hidden;
+}
+._scorebatEmbeddedPlayerW_ {
+  overflow: hidden;
+}
+.popup button {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  font-size: 28px;
+  color: #fff;
+  background-color: red;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
