--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,13 @@
   margin: 0;
   padding: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding-bottom: 2rem;
 }
 .container {
   display: flex;
@@ -36,15 +40,27 @@ body {
   margin-top: 2rem;
   position: relative;
   width: 450px;
+  height: 250px;
   cursor: pointer;
   overflow: hidden;
   border-radius: 8px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  transform: scale(0);
+  animation: show 1s both 0.5s;
+}
+@keyframes show {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 .single-match .hover {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translateY(100%);
+  transform: translateY(110%);
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -60,7 +76,8 @@ body {
   width: 170px;
   height: 45px;
   border: none;
-  background-color: #5f0a87;
+  background-color: #a4508b;
+  background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
   font-size: 18px;
   font-weight: 700;
   color: #fff;
@@ -81,6 +98,7 @@ body {
 }
 .matches .single-match img {
   width: 100%;
+  height: 100%;
 }
 
 section.page-header {
@@ -150,7 +168,8 @@ section.page-header .content p {
   right: 40px;
   font-size: 28px;
   color: #fff;
-  background-color: red;
+  background-color: #a4508b;
+  background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
   border-radius: 8px;
   border: none;
   outline: none;
@@ -158,4 +177,38 @@ section.page-header .content p {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+.btns {
+  margin: 2rem auto;
+  display: flex;
+  width: 400px;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.btns button {
+  margin-top: 1rem;
+  border: none;
+  background-color: #a4508b;
+  background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+  color: #ffffff;
+  padding: 0.7rem 1rem;
+  cursor: pointer;
+  border-radius: 2rem;
+}
+.search {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search input {
+  width: 500px;
+  height: 45px;
+  padding: 0 1rem;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  color: rgb(160, 160, 160);
+  border-bottom: 3px solid rgb(201, 201, 201);
 }
